[EPMDEDP-TECH] Fix EFS disabled case
Change-Id: I229781a1b64b20d9d624b935773e65c5990f4b38

--- a/resources/inventory.template.cfg
+++ b/resources/inventory.template.cfg
@@ -19,7 +19,7 @@ openshift_disable_check=disk_availability,docker_storage,memory_availability
 ansible_service_broker_install=False
 
 openshift_provisioners_install_provisioners=True
-openshift_provisioners_efs=True
+openshift_provisioners_efs=${deploy_efs}
 openshift_provisioners_efs_fsid=${efs_fsid}
 openshift_provisioners_efs_region=${aws_region}
 openshift_provisioners_efs_path=/
